--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
+    "cra-template-particles": "^3.0.0",
     "jquery": "^3.6.0",
     "node-sass": "8.0",
     "react": "^18.2.0",
@@ -13,9 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-tsparticles": "^2.1.3",
-    "tsparticles": "^2.1.3",
-    "tsparticles-shape-confetti": "^1.14.2",
+    "tsparticles": "^3.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
