--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
+    "@vercel/analytics": "^1.2.2",
     "cra-template-particles": "^3.0.0",
     "jquery": "^3.6.0",
     "node-sass": "8.0",
